client/scss/calendar.scss
$calBorderColor: #ddd;
$calCellBackground: #f2f2f2;
$eventBoxHeight: 20px;

.cal-nav {
  .current-month {
    text-transform: uppercase;
    text-align: center;
    font-size: $fontSizeLarger;
    font-weight: bold;
  }

  .next-month {
    text-align: right;
  }

  .weekdays {
    @include clearfix;
    text-align: center;
    text-transform: uppercase;
    color: $textColorLight;
    font-size: $fontSizeSmaller;
    margin-top: $baseLine * 2;

    td {
      width: percentage(1 / 7);
      vertical-align: bottom;
    }
  }

  @media screen and (max-width: $smallBreakPoint) {
    .previous-month,
    .next-month {
      width: 20%;

      span {
        display: none;
      }
    }

    .current-month {
      width: 60%;
    }
  }
}

.cal {
  tr {
    border-top: 1px solid $calBorderColor;

    &:first-child {
      border-top: 0;
    }

    &:nth-child(even) td {
      background: $calCellBackground;
    }
  }

  td {
    width: percentage(1 / 7);
    height: 110px;
    border-left: 1px solid $calBorderColor;
    padding: 10px 5px;
    vertical-align: middle;

    &:first-child {
      border-left: 0;
    }

    @media screen and (max-width: $mediumBreakPoint) {
      height: 85px;
    }

    @media screen and (max-width: $smallBreakPoint) {
      height: 50px;
      padding: 5px 2px;
    }
  }

  .cell-wrapper {
    position: relative;
    // required because Firefox won't accept position attribute on td elements
  }

  .cell-content {
    @include clearfix;
    display: table;
  }

  td .day {
    height: 100%;
    font-size: $fontSizeSmall;
    color: $textColorSecondary;
    width: 10px;
    display: table-cell;
    vertical-align: middle;
    letter-spacing: -1px;

    @media screen and (max-width: $smallBreakPoint) {
      font-size: $fontSizeSmaller;
      width: 10px;
    }
  }

  td .content {
    padding-left: 5px;
    font-size: $fontSizeSmaller;
  }

  ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
  }

  ul.grid {
    @include clearfix;

    li {
      float: left;
      height: $eventBoxHeight;
      overflow: hidden;
      margin-left: 3px;

      a {
        width: 30px;
      }

      & + li {
        margin-top: 0;
      }

      &:nth-child(3n+1) {
        margin-left: 0;
      }

      &:nth-child(n+4) {
        margin-top: 5px;
      }
    }
  }

  .event-box {
    border-radius: $radiusDefault / 2;
    background: $linkSkyBlue;
    border: 1px solid darken($linkSkyBlue, 10%);

    a {
      padding: 3px 8px;
      line-height: $fontSizeSmall;
      height: $eventBoxHeight;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      width: 100px;
      color: #fff;
      display: block;
      @include prefix(text-shadow, $textShadowDefault);

      @media screen and (max-width: $mediumBreakPoint) {
        width: 65px;
        height: 18px;
        font-size: $fontSizeSmallest;
        line-height: $fontSizeSmaller;
      }

      @media screen and (max-width: $smallBreakPoint) {
        width: 12px;
        padding: 2px;
      }
    }

    &:hover {
      background: $linkBlue;
    }

    & + li {
      margin-top: 5px;
    }
  }

  li.event-box {
    list-style-type: none !important;
  }

  .event-box.tooltip {
    overflow: visible;
    width: auto;
    pointer-events: none;
    font-size: $fontSizeSmaller;
    background: $linkBlue;
    z-index: 1000;
    border: 1px solid darken($linkBlue, 10%);

    a {
      width: auto;
      text-overflow: normal;
    }
  }
}

.calendar-wrapper {
  position: relative;
  overflow: hidden;
}

.month-wrapper {
  &.sliding {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    -webkit-transition: 500ms -webkit-transform ease;
    -moz-transition: 500ms -moz-transform ease;
    -ms-transition: 500ms -ms-transform ease;
    -o-transition: 500ms -o-transform ease;
    transition: 500ms transform ease;
  }

  &.forward.origin {
    @include transform(translate3d(0, 0, 0));
  }

  &.sliding.forward.origin {
    @include transform(translate3d(-100%, 0, 0));
  }

  &.forward.destination {
    @include transform(translate3d(100%, 0, 0));
  }

  &.sliding.forward.destination {
    @include transform(translate3d(0%, 0, 0));
  }

  &.backward.origin {
    @include transform(translate3d(0, 0, 0));
  }

  &.sliding.backward.origin {
    @include transform(translate3d(100%, 0, 0));
  }

  &.backward.destination {
    @include transform(translate3d(-100%, 0, 0));
  }

  &.sliding.backward.destination {
    @include transform(translate3d(0%, 0, 0));
  }
}

@media screen and (max-width: $smallBreakPoint) {
  .billboard.calendar-container {
    padding: 10px;
  }
}

